app/assets/stylesheets/pages/_results.sass
.game-results
  text-align: left
  .pile-group
    padding-bottom: 4em
  .result-action-list, .result-pile-title
    max-width: 370px
    margin-left: auto
    margin-right: auto
  .result-action-list
    list-style: none
    margin-bottom: 3em
    @media (max-width: 1024px)
      left: 30px
      max-width: 310px
    +decorative-content
      +image-replace("results/ico_advocating.png")
      left: -60px
      top: 0
  .card-item
    padding-left: 1em
    +decorative-content
      width: 8px
      height: 8px
      border-radius: 100%
      background: $result-adv
      left: 0
      top: 8px
  .result-pile-title
    font-weight: bold
    text-transform: uppercase
    margin-bottom: 1em
  .action-title
    font-weight: bold
  .card-item
    margin-bottom: .5em
  .advocating
    .action-title
      color: $result-adv
  .building-community-capacity
    &:after
      background-image: image-url("results/ico_building.png")
    .action-title
      color: $result-bcc
    .card-item:after
      background: $result-bcc
  .engaging-the-community
    &:after
      background-image: image-url("results/ico_engaging.png")
    .action-title
      color: $result-eng
    .card-item:after
      background: $result-eng
  .community-planning
    &:after
      background-image: image-url("results/ico_community.png")
    .action-title
      color: $result-cpl
    .card-item:after
      background: $result-cpl
  .expanding-financial-capital
    &:after
      background-image: image-url("results/ico_expanding.png")
    .action-title
      color: $result-efc
    .card-item:after
      background: $result-efc
  .aligning-action
    &:after
      background-image: image-url("results/ico_aligning.png")
    .action-title
      color: $result-alg
    .card-item:after
      background: $result-alg
  .direct-service-programming
    &:after
      background-image: image-url("results/ico_direct.png")
    .action-title
      color: $result-dsp
    .card-item:after
      background: $result-dsp
  .deploying-financial-capital
    &:after
      background-image: image-url("results/ico_deploying.png")
    .action-title
      color: $result-dfc
    .card-item:after
      background: $result-dfc
  .financial-donor-services
    &:after
      background-image: image-url("results/ico_finacial.png")
    .action-title
      color: $result-fds
    .card-item:after
      background: $result-fds
  .sharing-community-information
    &:after
      background-image: image-url("results/ico_sharing.png")
    .action-title
      color: $result-sci
    .card-item:after
      background: $result-sci

